--- a/src/main/webapp/app/layouts/main/main.component.html
+++ b/src/main/webapp/app/layouts/main/main.component.html
@@ -1,13 +1,18 @@
 <jhi-page-ribbon></jhi-page-ribbon>
-
-<div>
-    <router-outlet name="navbar"></router-outlet>
+<div class="sidenav">
+    <jhi-sidebar></jhi-sidebar>
 </div>
-
-<div class="container-fluid">
-    <div class="card jh-card">
-        <router-outlet></router-outlet>
+<div class="main">
+    <div>
+        <router-outlet name="navbar"></router-outlet>
     </div>
 
-    <jhi-footer></jhi-footer>
+    <div class="container-fluid">
+        <div class="card jh-card">
+            <router-outlet></router-outlet>
+        </div>
+
+        <jhi-footer></jhi-footer>
+    </div>
 </div>
+
