minor corrections in sidebar component

--- a/src/main/webapp/app/layouts/main/main.scss
+++ b/src/main/webapp/app/layouts/main/main.scss
@@ -13,10 +13,9 @@
   z-index: 1;
   left: 0;
   top: 61px;
-  background-color: #343a40 !important;
+  background-color: #0077b3 !important;
 }
 
 .collapse-button {
   position: relative;
-  top: calc(40% - 20px);
 }
