--- a/src/main/webapp/app/layouts/sidebar/sidebar.component.html
+++ b/src/main/webapp/app/layouts/sidebar/sidebar.component.html
@@ -1,77 +1,76 @@
-<nav [ngSwitch]="isAuthenticated()">
-    <div class="sidenav bg-dark">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
-                    <a class="side-link" routerLink="/">
+<nav>
+    <div class="sidenav bg-dark" [ngSwitch]="isAuthenticated()">
+        <ul class="side-nav ml-auto">
+            <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+                <a class="side-link" routerLink="/">
                     <span>
                         <fa-icon icon="home"></fa-icon>
                         <span>Home</span>
                     </span>
+                </a>
+            </li>
+            <li *ngSwitchCase="true" display="dynamic" routerLinkActive="active"
+                [routerLinkActiveOptions]="{ exact: true }">
+                <a class="side-link" routerLink="blog" routerLinkActive="active"
+                   [routerLinkActiveOptions]="{ exact: true }">
+                    <fa-icon icon="th-list"></fa-icon>
+                    <span>Blog</span>
+                </a>
+                <a class="side-link" routerLink="post" routerLinkActive="active"
+                   [routerLinkActiveOptions]="{ exact: true }">
+                    <fa-icon icon="th-list"></fa-icon>
+                    <span>Post</span>
+                </a>
+                <a class="side-link" routerLink="tag" routerLinkActive="active"
+                   [routerLinkActiveOptions]="{ exact: true }">
+                    <fa-icon icon="th-list"></fa-icon>
+                    <span>Tag</span>
+                </a>
+            </li>
+            <li *jhiHasAnyAuthority="'ROLE_ADMIN'" display="dynamic" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+                <a class="dropdown-toggle" ngbDropdownToggleid="admin-menu" data-toggle="collapse"
+                   (click)="collapseSubMenu()">
+                    <fa-icon icon="user-plus"></fa-icon>
+                    <span>Administration</span>
+                </a>
+                <div *ngIf="isSubMenuCollapsed" class="sidebar-submenu">
+                    <a class="dropdown-item" routerLink="admin/user-management" routerLinkActive="active">
+                        <fa-icon icon="user" [fixedWidth]="true"></fa-icon>
+                        <span>User management</span>
                     </a>
-                </li>
-                <li *ngSwitchCase="true" display="dynamic" routerLinkActive="active"
-                    [routerLinkActiveOptions]="{ exact: true }">
-                    <a class="side-link" routerLink="blog" routerLinkActive="active"
-                       [routerLinkActiveOptions]="{ exact: true }">
-                        <fa-icon icon="th-list"></fa-icon>
-                        <span>Blog</span>
-                    </a>
-                    <a class="side-link" routerLink="post" routerLinkActive="active"
-                       [routerLinkActiveOptions]="{ exact: true }">
-                        <fa-icon icon="th-list"></fa-icon>
-                        <span>Post</span>
-                    </a>
-                    <a class="side-link" routerLink="tag" routerLinkActive="active"
-                       [routerLinkActiveOptions]="{ exact: true }">
-                        <fa-icon icon="th-list"></fa-icon>
-                        <span>Tag</span>
-                    </a>
-                </li>
-                <li *jhiHasAnyAuthority="'ROLE_ADMIN'" display="dynamic" routerLinkActive="active"
-                    [routerLinkActiveOptions]="{ exact: true }">
-                    <a class="dropdown-toggle" ngbDropdownToggleid="admin-menu" data-toggle="collapse"
-                       (click)="collapseSubMenu()">
-                        <fa-icon icon="user-plus"></fa-icon>
-                        <span>Administration</span>
-                    </a>
-                    <div *ngIf="isSubMenuCollapsed" class="sidebar-submenu">
-                        <a class="dropdown-item" routerLink="admin/user-management" routerLinkActive="active">
-                            <fa-icon icon="user" [fixedWidth]="true"></fa-icon>
-                            <span>User management</span>
-                        </a>
 
-                        <a class="dropdown-item" routerLink="admin/metrics" routerLinkActive="active">
-                            <fa-icon icon="tachometer-alt" [fixedWidth]="true"></fa-icon>
-                            <span>Metrics</span>
-                        </a>
-                        <a class="dropdown-item" routerLink="admin/health" routerLinkActive="active">
-                            <fa-icon icon="heart" [fixedWidth]="true"></fa-icon>
-                            <span>Health</span>
-                        </a>
-                        <a class="dropdown-item" routerLink="admin/configuration" routerLinkActive="active">
-                            <fa-icon icon="list" [fixedWidth]="true"></fa-icon>
-                            <span>Configuration</span>
-                        </a>
-                        <a class="dropdown-item" routerLink="admin/audits" routerLinkActive="active">
-                            <fa-icon icon="bell" [fixedWidth]="true"></fa-icon>
-                            <span>Audits</span>
-                        </a>
-                        <a class="dropdown-item" routerLink="admin/logs" routerLinkActive="active">
-                            <fa-icon icon="tasks" [fixedWidth]="true"></fa-icon>
-                            <span>Logs</span>
-                        </a>
-                        <a *ngIf="swaggerEnabled" class="dropdown-item" routerLink="admin/docs"
-                           routerLinkActive="active">
-                            <fa-icon icon="book" [fixedWidth]="true"></fa-icon>
-                            <span>API</span>
-                        </a>
-                        <a *ngIf="!inProduction" class="dropdown-item" href='./h2-console' target="_tab">
-                            <fa-icon icon="hdd" [fixedWidth]="true"></fa-icon>
-                            <span>Database</span>
-                        </a>
-                    </div>
-                </li>
-            </ul>
-        </div>
+                    <a class="dropdown-item" routerLink="admin/metrics" routerLinkActive="active">
+                        <fa-icon icon="tachometer-alt" [fixedWidth]="true"></fa-icon>
+                        <span>Metrics</span>
+                    </a>
+                    <a class="dropdown-item" routerLink="admin/health" routerLinkActive="active">
+                        <fa-icon icon="heart" [fixedWidth]="true"></fa-icon>
+                        <span>Health</span>
+                    </a>
+                    <a class="dropdown-item" routerLink="admin/configuration" routerLinkActive="active">
+                        <fa-icon icon="list" [fixedWidth]="true"></fa-icon>
+                        <span>Configuration</span>
+                    </a>
+                    <a class="dropdown-item" routerLink="admin/audits" routerLinkActive="active">
+                        <fa-icon icon="bell" [fixedWidth]="true"></fa-icon>
+                        <span>Audits</span>
+                    </a>
+                    <a class="dropdown-item" routerLink="admin/logs" routerLinkActive="active">
+                        <fa-icon icon="tasks" [fixedWidth]="true"></fa-icon>
+                        <span>Logs</span>
+                    </a>
+                    <a *ngIf="swaggerEnabled" class="dropdown-item" routerLink="admin/docs"
+                       routerLinkActive="active">
+                        <fa-icon icon="book" [fixedWidth]="true"></fa-icon>
+                        <span>API</span>
+                    </a>
+                    <a *ngIf="!inProduction" class="dropdown-item" href='./h2-console' target="_tab">
+                        <fa-icon icon="hdd" [fixedWidth]="true"></fa-icon>
+                        <span>Database</span>
+                    </a>
+                </div>
+            </li>
+        </ul>
+    </div>
 </nav>
 
